--- a/index.html
+++ b/index.html
@@ -22,9 +22,17 @@
 <hr class="primary">
 
 <h2>Recent Projects</h2>
+    
+<!--Video - Rewind 2024-->
+<div class="videoDiv">
 <div class="videoWrapper">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/otoL0mWfFUs?si=nzjcKc_gssEJCvGh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/otoL0mWfFUs?si=nzjcKc_gssEJCvGh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div></div>
 
+<!--Video - A New Chapter Begins-->
+<div class="videoDiv">
+<div class="videoWrapper">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/TtEgidYZU5Q?si=M0yqOM47SS41IBHS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div></div>
+    
 <hr class="primary">
 <p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> Benjamin MacLeod All Rights Reserved</p>
 </div>
