--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <hr class="primary">
 
-<h2>Recent Projects</h2>
+<h1>Recent Projects</h1>
     
 <!--Video - Rewind 2024-->
 <div class="videoDiv">
@@ -34,7 +34,42 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/TtEgidYZU5Q?si=M0yqOM47SS41IBHS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div></div>
     
 <hr class="primary">
+
+<h1>My Experience</h1>
+<!--Position - Acadia French Club-->
+<h2 class="jobTitle"><a class="italics" href="https://www.instagram.com/acadiafrenchclub">Acadia French Club</a>, 2024-Present</h2>
+<h3>Treasurer</h3>
+<p>Dec 2024 - Present</p>
+
+<br>
+
+<!--Position - West St. Andrews Community Club-->
+<h2 class="jobTitle"><a class="italics" href="https://www.facebook.com/WSACommunityHall">West St. Andrews Community Club</a>, 2021-Present</h2>
+<h3>Committee Member</h3>
+<p>Sept 2021 - Present</p>
+
+<br>
+
+<!--Position - SCA TV-->
+<h2 class="jobTitle"><a class="italics" href="https://www.youtube.com/@sca_media">SCA TV</a>, 2018-2024</h2>
+<h3>Director</h3>
+<p>Sept 2021 - June 2024</p>
+<h3>Junior Production</h3>
+<p>Sept 2018 - Sept 2021</p>
+
+<br>
+
+<!--Position - Winding River Consolidated Library-->
+<h2 class="jobTitle"><a class="italics" href="https://wrc.ccrce.ca">Winding River Consolidated Library</a>, 2021-2024</h2>
+<h3>Library Volunteer</h3>
+<p>Sept 2021 - June 2024</p>
+
+<br>
+
+<hr class="primary">
+
 <p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> Benjamin MacLeod All Rights Reserved</p>
 </div>
+
 </body>
 </html>
