--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <hr class="primary">
 
-<p class="footer">Copyright &copy; <script>document.write(new Date().getFullYear())</script> Benjamin MacLeod All Rights Reserved</p>
+<p><small></small>Copyright &copy; <script>document.write(new Date().getFullYear())</script> Benjamin MacLeod All Rights Reserved</small></p>
 </div>
 
 </body>
