--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
 
 <h1>Error 404</h1>
     
-<p>The page you have requested could not be found. Take me back <a class="pLink" href="index.html">home</a>.</p>
+<p>The page you have requested could not be found. Take me back <a class="pLink" href="benjaminmacleod.com">home</a>.</p>
 <br>
 <br>
 
