--- a/404.html
+++ b/404.html
@@ -12,8 +12,7 @@
 
 <body>
 <div class="content">
-<h2 class="menu">Benjamin MacLeod</h2>
-    
+<h2 class="menu"><a class="noDecoration">Benjamin MacLeod</a></h2>    
 <hr class="primary">
 
 <h1>Error 404</h1>
