--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
 
 <body>
 <div class="content">
-<h2 class="menu"><a class="noDecoration">Benjamin MacLeod</a></h2>    
+<h2 class="menu"><a class="noDecoration" href="https://benjaminmacleod.com">Benjamin MacLeod</a></h2>    
 <hr class="primary">
 
 <h1>Recent Projects</h1>
