--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <br>
 <hr class="primary">
 
-<h1><a class="noDecoration">Recent Projects</a></h1>
+<h1><a class="noDecoration" href="https://benjaminmacleod.com/projects">Recent Projects</a></h1>
     
 <!--Video - Rewind 2024-->
 <div class="videoDiv">
