--- a/index.html
+++ b/index.html
@@ -51,33 +51,70 @@
 <hr class="primary">
 
 <h1>My Experience</h1>
+    
 <!--Position - Acadia French Club-->
 <h2 class="jobTitle"><a class="italics" href="https://www.instagram.com/acadiafrenchclub">Acadia French Club</a>, 2024-Present</h2>
+<h4>Acadia University, Wolfville, NS</h4>
 <h3>Treasurer</h3>
 <p>Dec 2024 - Present</p>
 
 <br>
 
+<!--Position - Knox United Church-->
+<h2 class="jobTitle"><a class="italics" href="https://www.facebook.com/knoxunitedbrookfield/">Knox United Church</a>, 2020-Present</h2>
+<h4>Brookfield, NS</h4>
+<h3>Volunteer</h3>
+<p>Sept 2020 - Present</p>
+<ul>
+  <li>Livestream and operate audio visual equipment for weekly Sunday services</li>
+</ul>
+
+<br>
+
 <!--Position - West St. Andrews Community Club-->
-<h2 class="jobTitle"><a class="italics" href="https://www.facebook.com/WSACommunityHall">West St. Andrews Community Club</a>, 2021-Present</h2>
+<h2 class="jobTitle"><a class="italics" href="https://www.facebook.com/WSACommunityHall">West St. Andrews Community Club</a>, 2020-Present</h2>
+<h4>West St. Andrews, NS</h4>
 <h3>Committee Member</h3>
-<p>Sept 2021 - Present</p>
+<p>Sept 2020 - Present</p>
+<ul>
+  <li>Member of the Community Club executive (e.g. creating posters for fundraisers)</li>
+  <li>Volunteer at community breakfast fundraisers</li>
+</ul>
+
+<br>
+
+<!--Position - Otter's Ice Cream-->
+<h2 class="jobTitle"><a class="italics">Otter's Ice Cream</a>, 2021-2024</h2>
+<h4>Shubenacadie Wildlife Park, Shubenacadie, NS</h4>
+<h3>Assistant Manager</h3>
+<p>May 2023 - Aug 2024 (Seasonal)</p>
+<ul>
+  <li>Responsible for creating the monthly work schedule</li>
+</ul>
+<h3>Cashier and Food Service Worker</h3>
+<p>June 2021 - Aug 2024 (Seasonal)</p>
+<ul>
+  <li>Demonstrated knowledge of menu, including promotional products and new flavours</li>
+  <li>Responsible for financial activities of the business (e.g. maintaining cash register and making change, counting and completing paperwork for end of day sales totals)</li>
+</ul>
 
 <br>
 
 <!--Position - SCA TV-->
 <h2 class="jobTitle"><a class="italics" href="https://www.youtube.com/@sca_media">SCA TV</a>, 2018-2024</h2>
+<h4>South Colchester Academy, Brookfield, NS</h4>
 <h3>Director</h3>
 <p>Sept 2021 - June 2024</p>
+<ul>
+  <li>Lead setup/operation of equipment at school activities</li>
+  <li>Maintain social media presence on Instagram (@sca.media)</li>
+  <li>Train and mentor junior team members</li>
+</ul>
 <h3>Junior Production</h3>
 <p>Sept 2018 - Sept 2021</p>
-
-<br>
-
-<!--Position - Winding River Consolidated Library-->
-<h2 class="jobTitle"><a class="italics" href="https://wrc.ccrce.ca">Winding River Consolidated Library</a>, 2021-2024</h2>
-<h3>Library Volunteer</h3>
-<p>Sept 2021 - June 2024</p>
+<ul>
+  <li>Produce daily, live TV news broadcasts</li>
+</ul>
 
 <br>
 
