--- a/home.html
+++ b/home.html
@@ -12,7 +12,14 @@
 
 <body>
 <div class="content">
-<h2 class="menu"><a class="noDecoration">Benjamin MacLeod</a></h2>    
+<div class="header">
+    <h2><a style="text-decoration:none" href="https://benjaminmacleod.com">Benjamin MacLeod</a></h2>
+    <div class="header-right">
+    <h3 class="header-elements"><a style="text-decoration:none" href="https://benjaminmacleod.com">Home</a></h3>
+    <h3 class="header-elements"><a style="text-decoration:none" href="https://benjaminmacleod.com/projects">Projects</a></h3>
+    <h3 class="header-elements"><a style="text-decoration:none" href="https://benjaminmacleod.com/about">About</a></h3>
+  </div>
+</div>
 <hr class="primary">
 
 <h1>You are being redirected...</h1>
