--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
 
 </style>
 </head>
-
 <body>
 <div class="content">
 <div class="header">
-    <h2><a style="text-decoration:none" href="https://benjaminmacleod.com">Benjamin MacLeod</a></h2>
+    <h2><a style="text-decoration:none;font-weight:600" href="https://benjaminmacleod.com">Benjamin MacLeod</a></h2>
     <div class="header-right">
-    <h3 class="header-elements"><a style="text-decoration:none" href="https://benjaminmacleod.com">Home</a></h3>
+    <h3 class="header-elements"><a style="text-decoration:none; font-weight:900" href="https://benjaminmacleod.com">Home</a></h3>
     <h3 class="header-elements"><a style="text-decoration:none" href="https://benjaminmacleod.com/projects">Projects</a></h3>
     <h3 class="header-elements"><a style="text-decoration:none" href="https://benjaminmacleod.com/about">About</a></h3>
   </div>
@@ -51,7 +50,7 @@
     <br>
 <hr class="primary">
 
-<h1><a class="noDecoration" href="https://benjaminmacleod.com/projects">Recent Projects</a></h1>
+<h1><a style="font-weight: 700;" class="noDecoration" href="https://benjaminmacleod.com/projects">Recent Projects</a></h1>
     
 <!--Video - Rewind 2024-->
 <div class="videoDiv">
