--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Benjamin MacLeod - Projects</title>
+<title>Projects | Benjamin MacLeod</title>
+<link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+<link rel="icon" type="image/png" href="/assets/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
+<link rel="shortcut icon" href="/assets/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png" />
+<meta name="apple-mobile-web-app-title" content="BM" />
+<link rel="manifest" href="/assets/site.webmanifest" />
+
 <link rel="stylesheet" type="text/css" href="style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -16,7 +24,7 @@
     <h2><a style="text-decoration:none" href="https://benjaminmacleod.com">Benjamin MacLeod</a></h2>
     <div class="header-right">
     <h3 class="header-elements"><a style="text-decoration:none" href="https://benjaminmacleod.com">Home</a></h3>
-    <h3 class="header-elements"><a style="text-decoration:none" href="https://benjaminmacleod.com/projects">Projects</a></h3>
+    <h3 class="header-elements"><a style="text-decoration:none; font-weight:900" href="https://benjaminmacleod.com/projects">Projects</a></h3>
     <h3 class="header-elements"><a style="text-decoration:none" href="https://benjaminmacleod.com/about">About</a></h3>
   </div>
 </div>
