--- a/about.html
+++ b/about.html
@@ -25,12 +25,12 @@
     <div class="header-right">
     <h3 class="header-elements"><a style="text-decoration:none" href="https://benjaminmacleod.com">Home</a></h3>
     <h3 class="header-elements"><a style="text-decoration:none" href="https://benjaminmacleod.com/projects">Projects</a></h3>
-    <h3 class="header-elements"><a style="text-decoration:none" href="https://benjaminmacleod.com/about">About</a></h3>
+    <h3 class="header-elements"><a style="text-decoration:none; font-weight:900" href="https://benjaminmacleod.com/about">About</a></h3>
   </div>
 </div>
     
 <hr class="primary">
-    
+
 <h1>Hello,</h1>
 <p>My name is Benjamin MacLeod, and I am pursuing a Bachelor of Business Administration at Acadia University. Some of my hobbies include video ediitng, photography, and writing. </p>
 
