--- a/404.html
+++ b/404.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Benjamin MacLeod - 404</title>
+<title>404 | Benjamin MacLeod</title>
+<link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+<link rel="icon" type="image/png" href="/assets/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
+<link rel="shortcut icon" href="/assets/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png" />
+<meta name="apple-mobile-web-app-title" content="BM" />
+<link rel="manifest" href="/assets/site.webmanifest" />
+
 <link rel="stylesheet" type="text/css" href="style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
