--- a/about.html
+++ b/about.html
@@ -27,11 +27,11 @@
 
 <!--Section - Header-->
 <div class="header">
-    <h2><a style="text-decoration:none" href="https://benjaminmacleod.com">Benjamin MacLeod</a></h2>
+    <h2><a class="header-title" href="https://benjaminmacleod.com">Benjamin MacLeod</a></h2>
 <div class="header-right">
-    <h3 class="header-elements"><a style="text-decoration:none" href="https://benjaminmacleod.com">Home</a></h3>
-    <h3 class="header-elements"><a style="text-decoration:none" href="https://benjaminmacleod.com/projects">Projects</a></h3>
-    <h3 class="header-elements"><a style="text-decoration:none; font-weight:900" href="https://benjaminmacleod.com/about">About</a></h3>
+    <h3><a class="header-elements" href="https://benjaminmacleod.com">Home</a></h3>
+    <h3><a class="header-elements" href="https://benjaminmacleod.com/projects">Projects</a></h3>
+    <h3><a class="header-selected" href="https://benjaminmacleod.com/about">About</a></h3>
 </div>
 </div>
     
@@ -45,14 +45,13 @@
 <br>
 
 <div><p>Find me online:</p>
-
     <!--Subsection - Social Bar-->
     <div class="social-media-sharesheet">
         <a href="mailto:me@benjaminmacleod.com" aria-label="Send me an email" target="_blank" rel="noopener noreferrer" class="social-icon email"></a>
         <a href="https://www.linkedin.com/in/benjaminmacleod/" aria-label="Check out my LinkedIn" target="_blank" rel="noopener noreferrer" class="social-icon linkedin"></a>
         <a href="https://www.instagram.com/_benjaminmacleod/" aria-label="Follow me on Instagram" target="_blank" rel="noopener noreferrer" class="social-icon instagram"></a>
         <a href="https://www.youtube.com/@benjaminmacleod" aria-label="Subscribe to my YouTube Channel" target="_blank" rel="noopener noreferrer" class="social-icon youtube"></a>
-    </div>   
+    </div>
 </div>
 
 <br>
