--- a/home.html
+++ b/home.html
@@ -30,11 +30,11 @@
 
 <!--Section - Header-->
 <div class="header">
-    <h2><a style="text-decoration:none" href="https://benjaminmacleod.com">Benjamin MacLeod</a></h2>
+    <h2><a class="header-title" href="https://benjaminmacleod.com">Benjamin MacLeod</a></h2>
 <div class="header-right">
-    <h3 class="header-elements"><a style="text-decoration:none" href="https://benjaminmacleod.com">Home</a></h3>
-    <h3 class="header-elements"><a style="text-decoration:none" href="https://benjaminmacleod.com/projects">Projects</a></h3>
-    <h3 class="header-elements"><a style="text-decoration:none" href="https://benjaminmacleod.com/about">About</a></h3>
+    <h3><a class="header-elements" href="https://benjaminmacleod.com">Home</a></h3>
+    <h3><a class="header-elements" href="https://benjaminmacleod.com/projects">Projects</a></h3>
+    <h3><a class="header-elements" href="https://benjaminmacleod.com/about">About</a></h3>
 </div>
 </div>
 
