--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 <!--Section - Introduction-->
 <h1>Hello,</h1>
 <p>My name is Benjamin MacLeod, and I am pursuing a Bachelor of Business Administration at Acadia University. Some of my hobbies include video ediitng, photography, and writing. </p>
-<img style="max-width: 100%; max-height: 832px;"src="images/portrait_landscape.jpg">
+<img style="max-width: 100%; max-height: 832px;"src="images/portrait_landscape.jpg" alt="Portrait of Benjamin MacLeod. Photographed at Acadia University">
 
 <br>
 
