--- a/fr.html
+++ b/fr.html
@@ -39,7 +39,7 @@
 
 <!--Section - Introduction-->
 <h1>Salut,</h1>
-<p>Je m'appelle Benjamin MacLeod, et J'etudie le commerce à l'Universite Acadia. Je m'intéresse au montage vidéo, à la photographie et à l'écriture. </p>
+<p>Je m'appelle Benjamin MacLeod, et j'etudie le commerce à l'Université Acadia. Je m'intéresse au montage vidéo, à la photographie et à l'écriture. </p>
 
 <div><p>Retrouvez-moi sur Internet :</p>
     <!--Subsection - Social Bar-->
@@ -77,7 +77,7 @@
     
     <!--Position - Acadia French Club-->
     <h2 class="job-title"><a class="italics" href="https://www.instagram.com/acadiafrenchclub">Acadia French Club</a>, 2024-Présent</h2>
-    <h4>L'Universite Acadia, Wolfville, NS</h4>
+    <h4>L'Université Acadia, Wolfville, NS</h4>
     <h3>Vice présidente de finance</h3>
     <p>Déc 2024 - Présent</p>
 
