--- a/404.html
+++ b/404.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!--Meta - Title-->
 <title>404 | Benjamin MacLeod</title>
@@ -16,7 +18,6 @@
 
 <!--Meta - Style-->
 <link rel="stylesheet" type="text/css" href="style.css">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style></style>
 
