--- a/fr.html
+++ b/fr.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
+<meta charset="utf-8">
 
 <!--Meta - Title-->
 <title>Benjamin MacLeod</title>
@@ -61,13 +62,13 @@
     <!--Video - SCA Spirit Video 2024-->
     <div class="video-div">
     <div class="video-wrapper">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/a-1ohx83QH4?si=OnKAvqeI52yM1YtL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div></div>
+    <iframe style="border: none;" width="560" height="315" src="https://www.youtube.com/embed/a-1ohx83QH4?si=OnKAvqeI52yM1YtL" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div></div>
     <br>
     
 <!--Video - Grad Video 2024-->
     <div class="video-div">
     <div class="video-wrapper">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/GAjH-E6ajlM?si=Eto3qdE2nlSJCvJM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div></div>
+    <iframe style="border: none;" width="560" height="315" src="https://www.youtube.com/embed/GAjH-E6ajlM?si=Eto3qdE2nlSJCvJM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div></div>
     <br>
     
 <hr class="primary">
