--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!--Meta - Title-->
 <title>Benjamin MacLeod</title>
@@ -16,8 +18,15 @@
 
 <!--Meta - Style-->
 <link rel="stylesheet" type="text/css" href="style.css">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<!--Meta - Facebook-->
+<meta property="og:type" content="website">
+<meta property="og:title" content="Benjamin MacLeod">
+<meta property="og:image" content="https://benjaminmacleod.com/images/portrait_landscape.jpg">
+<meta property="og:image:alt" content="A portrait of Benjamin MacLeod standing in front of a forest in fall">
+<meta property="og:description" content="My name is Benjamin MacLeod, and I am pursuing a Bachelor of Business Administration at Acadia University.">
+<meta property="og:locale" content="en_US">
+<meta property="article:author" content="Benjamin MacLeod">
 <style></style>
 
 </head>
@@ -61,13 +70,13 @@
     <!--Video - SCA Spirit Video 2024-->
     <div class="video-div">
     <div class="video-wrapper">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/a-1ohx83QH4?si=OnKAvqeI52yM1YtL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div></div>
+    <iframe style="border: none;" width="560" height="315" src="https://www.youtube.com/embed/a-1ohx83QH4?si=OnKAvqeI52yM1YtL" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div></div>
     <br>
     
 <!--Video - Grad Video 2024-->
     <div class="video-div">
     <div class="video-wrapper">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/GAjH-E6ajlM?si=Eto3qdE2nlSJCvJM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div></div>
+    <iframe style="border: none;" width="560" height="315" src="https://www.youtube.com/embed/GAjH-E6ajlM?si=Eto3qdE2nlSJCvJM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div></div>
     <br>
     
 <hr class="primary">
