--- a/lettergrade.html
+++ b/lettergrade.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+<meta charset="utf-8">
 
 <!--Meta - Title-->
 <title>Acadia University Percent to Letter Calculator</title>
