--- a/fr.html
+++ b/fr.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!--Meta - Title-->
 <title>Benjamin MacLeod</title>
@@ -17,8 +18,15 @@
 
 <!--Meta - Style-->
 <link rel="stylesheet" type="text/css" href="style.css">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<!--Meta - Facebook-->
+<meta property="og:type" content="website">
+<meta property="og:title" content="Benjamin MacLeod">
+<meta property="og:image" content="https://benjaminmacleod.com/images/portrait_landscape.jpg">
+<meta property="og:image:alt" content="Un portrait de Benjamin MacLeod debout devant une forêt en automne">
+<meta property="og:description" content="Je m'appelle Benjamin MacLeod, et j'etudie le commerce à l'Université Acadia.">
+<meta property="og:locale" content="en_US">
+<meta property="article:author" content="Benjamin MacLeod">
 <style></style>
 
 </head>
