--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!--Meta - Title-->
 <title>Projects | Benjamin MacLeod</title>
@@ -17,8 +18,15 @@
 
 <!--Meta - Style-->
 <link rel="stylesheet" type="text/css" href="style.css">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<!--Meta - Facebook-->
+<meta property="og:type" content="website">
+<meta property="og:title" content="Projects | Benjamin MacLeod">
+<meta property="og:image" content="https://benjaminmacleod.com/images/portrait_landscape.jpg">
+<meta property="og:image:alt" content="A portrait of Benjamin MacLeod standing in front of a forest in fall">
+<meta property="og:description" content="My name is Benjamin MacLeod, and I am pursuing a Bachelor of Business Administration at Acadia University.">
+<meta property="og:locale" content="en_US">
+<meta property="article:author" content="Benjamin MacLeod">
 <style></style>
 
 </head>
