--- a/fr.html
+++ b/fr.html
@@ -65,7 +65,7 @@
 <hr class="primary">
 
 <!--Section - Recent Projects-->
-<h1><a style="font-weight: 700;" class="no-decoration" href="https://benjaminmacleod.com/projects">Projets récents</a></h1>
+<h1><a style="font-weight: 700;" href="https://benjaminmacleod.com/projects">Projets récents</a></h1>
     
     <!--Video - SCA Spirit Video 2024-->
     <div class="video-div">
@@ -82,7 +82,7 @@
 <hr class="primary">
 
 <!--Section - Experience-->
-<h1>Mon expérience</h1>
+    <h1><a style="font-weight: 700;" href="https://benjaminmacleod.com/experience">Mon expérience</a></h1>
     
     <!--Position - Acadia French Club-->
     <h2 class="job-title"><a class="italics" href="https://www.instagram.com/acadiafrenchclub">Acadia French Club</a>, 2024-Présent</h2>
