Same as earlier, but now, en Français

--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
 <link rel="manifest" href="/assets/site.webmanifest" />
 
 <!--Meta - Style-->
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="/style.css">
 
 <style></style>
 
