--- a/fr/about.html
+++ b/fr/about.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!--Meta - Title-->
-<title>About | Benjamin MacLeod</title>
+<title>À propos | Benjamin MacLeod</title>
 
 <!--Meta - Favicon-->
 <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
@@ -21,11 +21,11 @@
 
 <!--Meta - Facebook-->
 <meta property="og:type" content="website">
-<meta property="og:title" content="About | Benjamin MacLeod">
+<meta property="og:title" content="À propos | Benjamin MacLeod">
 <meta property="og:image" content="https://benjaminmacleod.com/images/portrait_landscape.jpg">
-<meta property="og:image:alt" content="A portrait of Benjamin MacLeod standing in front of a forest in fall">
-<meta property="og:description" content="My name is Benjamin MacLeod, and I am pursuing a Bachelor of Business Administration at Acadia University.">
-<meta property="og:locale" content="en_US">
+<meta property="og:image:alt" content="Un portrait de Benjamin MacLeod debout devant une forêt en automne">
+<meta property="og:description" content="Je m'appelle Benjamin MacLeod, et j'etudie le commerce à l'Université Acadia.">
+<meta property="og:locale" content="fr_CA">
 <meta property="article:author" content="Benjamin MacLeod">
 <style></style>
 
@@ -38,28 +38,26 @@
 <div class="header">
     <h2><a class="header-title" href="https://benjaminmacleod.com">Benjamin MacLeod</a></h2>
 <div class="header-right">
-    <h3><a class="header-elements" href="https://benjaminmacleod.com">Home</a></h3>
-    <h3><a class="header-elements" href="https://benjaminmacleod.com/projects">Projects</a></h3>
-    <h3><a class="header-selected" href="https://benjaminmacleod.com/about">About</a></h3>
+    <h3><a class="header-elements" href="https://benjaminmacleod.com">Accueil</a></h3>
+    <h3><a class="header-elements" href="https://benjaminmacleod.com/projects">Projets</a></h3>
+    <h3><a class="header-selected" href="https://benjaminmacleod.com/about">À propos</a></h3>
 </div>
 </div>
     
 <hr class="primary">
 
 <!--Section - Introduction-->
-<h1>Hello,</h1>
-<p>My name is Benjamin MacLeod, and I am pursuing a Bachelor of Business Administration at Acadia University. Some of my hobbies include video ediitng, photography, and writing. </p>
+<h1>Salut,</h1>
+<p>Je m'appelle Benjamin MacLeod, et j'etudie le commerce à l'Université Acadia. Je m'intéresse au montage vidéo, à la photographie et à l'écriture. </p>
 <img style="max-width: 100%; max-height: 832px;" src="/images/portrait_landscape.jpg" alt="Portrait of Benjamin MacLeod. Photographed at Acadia University">
 
-<br>
-
-<div><p>Find me online:</p>
+<div><p>Retrouvez-moi sur Internet :</p>
     <!--Subsection - Social Bar-->
     <div class="social-media-sharesheet">
-        <a href="mailto:me@benjaminmacleod.com" aria-label="Send me an email" target="_blank" rel="noopener noreferrer" class="social-icon email"></a>
-        <a href="https://www.linkedin.com/in/benjaminmacleod/" aria-label="Check out my LinkedIn" target="_blank" rel="noopener noreferrer" class="social-icon linkedin"></a>
-        <a href="https://www.instagram.com/_benjaminmacleod/" aria-label="Follow me on Instagram" target="_blank" rel="noopener noreferrer" class="social-icon instagram"></a>
-        <a href="https://www.youtube.com/@benjaminmacleod" aria-label="Subscribe to my YouTube Channel" target="_blank" rel="noopener noreferrer" class="social-icon youtube"></a>
+        <a href="mailto:me@benjaminmacleod.com" aria-label="Envoyez-moi un courriel" target="_blank" rel="noopener noreferrer" class="social-icon email"></a>
+        <a href="https://www.linkedin.com/in/benjaminmacleod/" aria-label="Vistez mon LinkedIn" target="_blank" rel="noopener noreferrer" class="social-icon linkedin"></a>
+        <a href="https://www.instagram.com/_benjaminmacleod/" aria-label="Suivez-moi sur Instagram" target="_blank" rel="noopener noreferrer" class="social-icon instagram"></a>
+        <a href="https://www.youtube.com/@benjaminmacleod" aria-label="S'abonner à ma chaîne YouTube" target="_blank" rel="noopener noreferrer" class="social-icon youtube"></a>
     </div>
 </div>
 
@@ -68,7 +66,7 @@
 <hr class="primary">
 
 <!--Section - Footer-->
-<p><small>Copyright &copy; <script>document.write(new Date().getFullYear())</script> Benjamin MacLeod All Rights Reserved</small></p>
+<p><small>Benjamin MacLeod &copy; <script>document.write(new Date().getFullYear())</script>, tous droits réservés.</small></p>
 
 <!--Section - Social Bar-->
 <div class="social-media-sharesheet">
