--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 <link rel="manifest" href="/assets/site.webmanifest" />
 
 <!--Meta - Style-->
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="/style.css">
 
 <!--Meta - Redirect-->
 <meta http-equiv="refresh" content="1; url=https://benjaminmacleod.com">
