--- a/lettergrade.html
+++ b/lettergrade.html
@@ -17,7 +17,7 @@
 <link rel="manifest" href="/assets/site.webmanifest" />
 
 <!--Meta - Style-->
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="/style.css">
 
 <!--Meta - Redirect-->
 <meta http-equiv="refresh" content="0; url=https://docs.google.com/spreadsheets/d/1RIZQnIhea1i6xSHs-vmgeFS5YyL1QVOHwZsrWM5GQE0/copy">
