--- a/projects.html
+++ b/projects.html
@@ -48,7 +48,18 @@
 
 <!--Section - Recent Projects-->
 <h1>Recent Projects</h1>
+     
+<!--Project - SCA Archives-->
+    <h2>South Colchester Academy Archives</h2>
+    <h3><a class="project-link" href="https://sites.google.com/view/southcolchesterarchives/home">bit.ly/southcolchesterarchives</a></h3>
+    <p>SCA Archives is a digital collection of yearbooks, video projects, and additional content. SCA Archives contains records from South Colchester Academy (2003 - Present), as well as the former South Colchester High School (1950 - 2003).</p>
+    <a href="https://sites.google.com/view/southcolchesterarchives/home">
+    <img style="max-width: 100%; max-height: 832px;" src="/images/yearbooks.png" alt="Collage of Yearbooks from South Colchester Academy, 2004-2024">
+    </a>
     
+    <br>
+    <br>
+   
     <!--Video - Grad Video 2024-->
     <div class="video-div">
     <div class="video-wrapper">
