--- a/layoffs.html
+++ b/layoffs.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!--Meta - Title-->
-<title>Acadia University Percent to Letter Calculator</title>
+<title>SCA TV Layoffs</title>
     
 <!--Meta - Favicon-->
 <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
@@ -20,7 +20,7 @@
 <link rel="stylesheet" type="text/css" href="/style.css">
 
 <!--Meta - Redirect-->
-<meta http-equiv="refresh" content="0; url=https://docs.google.com/spreadsheets/d/1RIZQnIhea1i6xSHs-vmgeFS5YyL1QVOHwZsrWM5GQE0/copy">
+<meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=xvFZjo5PgG0">
 
 <style></style>
 
