--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <meta property="og:title" content="Benjamin MacLeod">
 <meta property="og:image" content="https://benjaminmacleod.com/images/portrait_landscape.jpg">
 <meta property="og:image:alt" content="A portrait of Benjamin MacLeod standing in front of a forest in fall">
-<meta property="og:description" content="My name is Benjamin MacLeod, and I am pursuing a Bachelor of Business Administration at Acadia University.">
+<meta property="og:description" content="My name is Benjamin MacLeod, and I am pursuing a Bachelor of Business Administration degree at Acadia University.">
 <meta property="og:locale" content="en_US">
 <meta property="article:author" content="Benjamin MacLeod">
 <style></style>
