--- a/projects.html
+++ b/projects.html
@@ -83,7 +83,13 @@
     <div class="video-wrapper">
     <iframe style="border: none;" width="560" height="315" src="https://www.youtube.com/embed/Tn8CIYG-pKw?si=VrfMcJa5P3cBhH_L" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div></div>
     <br>
-    
+ 
+    <!--Video - Remembrance Day-->
+    <div class="video-div">
+    <div class="video-wrapper">
+    <iframe style="border: none;" width="560" height="315" src="https://www.youtube.com/embed/1deIfRSDJ9c?si=KdyviiyRkyicOLwb" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div></div>
+    <br>
+   
 <hr class="primary">
 
 <!--Section - Footer-->
