--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <!--Section - Introduction-->
 <h1>Hello,</h1>
-<p>My name is Benjamin MacLeod, and I am pursuing a Bachelor of Business Administration at Acadia University. Some of my hobbies include video ediitng, photography, and writing. </p>
+<p>My name is Benjamin MacLeod, and I am pursuing a Bachelor of Business Administration degree at Acadia University. Some of my hobbies include video ediitng, photography, and writing. </p>
 
 <div><p>Find me online:</p>
     <!--Subsection - Social Bar-->
