--- a/about.html
+++ b/about.html
@@ -1,92 +1,129 @@
-<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Benjamin MacLeod</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=dark_mode" />
-    </head>
-    <body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!--Meta - Title-->
+    <title>About | Benjamin MacLeod</title>
+
+    <!--Meta - Favicon-->
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
+    <link rel="icon" type="image/png" href="/assets/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg" />
+    <link rel="shortcut icon" href="/assets/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="BM" />
+    <link rel="manifest" href="/assets/site.webmanifest" />
+
+    <!--Meta - Style-->
+    <link rel="stylesheet" type="text/css" href="/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=dark_mode" />
+
+    <!--Meta - Facebook-->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="About | Benjamin MacLeod" />
+    <meta property="og:image" content="https://benjaminmacleod.com/images/portrait_landscape.jpg" />
+    <meta property="og:image:alt" content="A portrait of Benjamin MacLeod standing in front of a forest in fall" />
+    <meta
+      property="og:description"
+      content="My name is Benjamin MacLeod, and I am pursuing a Bachelor of Business Administration at Acadia University." />
+    <meta property="og:locale" content="en_US" />
+    <meta property="article:author" content="Benjamin MacLeod" />
+    <style></style>
+  </head>
+  <body>
     <div class="navBar">
-            <h4 class="title"><a>Benjamin MacLeod</a></h4>
-        <div class="navRight">
-            <h5><a class="navLink" data-text="Home" href="/index.html">Home</a></h5>
-            <h5><a class="navLink" data-text="Projects" href="/projects.html">Projects</a></h5>
-            <h5><a class="navLink" data-text="About" href="/about.html">About</a></h5>
-            <h5 class="icon-toggle" id="darkModeToggle">
-                <a class="material-symbols-outlined icon-outline">dark_mode</a>
-                <a class="material-symbols-outlined icon-filled">dark_mode</a>
-            </h5>
-        </div>
+      <h4 class="title"><a>Benjamin MacLeod</a></h4>
+      <div class="navRight">
+        <h5><a class="navLink" data-text="Home" href="/index.html">Home</a></h5>
+        <h5><a class="navLink" data-text="Projects" href="/projects.html">Projects</a></h5>
+        <h5><a class="navLink" data-text="About" href="/about.html">About</a></h5>
+        <h5 class="icon-toggle" id="darkModeToggle">
+          <a class="material-symbols-outlined icon-outline">dark_mode</a>
+          <a class="material-symbols-outlined icon-filled">dark_mode</a>
+        </h5>
+      </div>
     </div>
-<script>
-  const toggleBtn = document.getElementById('darkModeToggle');
+    <script>
+      const toggleBtn = document.getElementById("darkModeToggle");
 
-  toggleBtn.addEventListener('click', () => {
-    document.body.classList.toggle('dark-mode');
-    toggleBtn.classList.toggle('active');
+      toggleBtn.addEventListener("click", () => {
+        document.body.classList.toggle("dark-mode");
+        toggleBtn.classList.toggle("active");
 
-    // Optional: Save preference to localStorage
-    if (document.body.classList.contains('dark-mode')) {
-      localStorage.setItem('theme', 'dark');
-    } else {
-      localStorage.setItem('theme', 'light');
-    }
-  });
+        // Optional: Save preference to localStorage
+        if (document.body.classList.contains("dark-mode")) {
+          localStorage.setItem("theme", "dark");
+        } else {
+          localStorage.setItem("theme", "light");
+        }
+      });
 
-  // On page load, apply saved theme
-  window.addEventListener('DOMContentLoaded', () => {
-    const savedTheme = localStorage.getItem('theme');
-    if (savedTheme === 'dark') {
-      document.body.classList.add('dark-mode');
-      toggleBtn.classList.add('active');
-    }
-  });
-</script>
+      // On page load, apply saved theme
+      window.addEventListener("DOMContentLoaded", () => {
+        const savedTheme = localStorage.getItem("theme");
+        if (savedTheme === "dark") {
+          document.body.classList.add("dark-mode");
+          toggleBtn.classList.add("active");
+        }
+      });
+    </script>
 
     <div class="mainContent">
-        <div class="homeBio">
+      <div class="homeBio">
         <h1 class="gradient-underline">Hello,</h1>
-        <p>My name is Benjamin MacLeod, and I am pursuing a Bachelor of Business Administration degree at Acadia University. Some of my hobbies include video ediitng, photography, and writing.</p>
-        <br>
-        <img style="max-width: 100%; max-height: 832px;" src="/images/portrait_landscape.jpg" alt="Portrait of Benjamin MacLeod. Photographed at Acadia University">
+        <p>
+          My name is Benjamin MacLeod, and I am pursuing a Bachelor of Business Administration degree at Acadia
+          University. Some of my hobbies include video ediitng, photography, and writing.
+        </p>
+        <br />
+        <img
+          style="max-width: 100%; max-height: 832px"
+          src="/images/portrait_landscape.jpg"
+          alt="Portrait of Benjamin MacLeod. Photographed at Acadia University" />
+      </div>
+      <h4>Find me online:</h4>
+      <div class="social-barL">
+        <a href="mailto:me@benjaminmacleod.com" class="social-icon" title="Email">
+          <i class="fas fa-envelope"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/benjaminmacleod/" class="social-icon" title="LinkedIn" target="_blank">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+        <a href="https://www.instagram.com/benjamin_macleod/" class="social-icon" title="Instagram" target="_blank">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://www.youtube.com/@benjaminmacleod" class="social-icon" title="YouTube" target="_blank">
+          <i class="fab fa-youtube"></i>
+        </a>
+      </div>
 
-        </div>
-        <h4>Find me online:</h4>
-<div class="social-barL">
-  <a href="mailto:me@benjaminmacleod.com" class="social-icon" title="Email">
-    <i class="fas fa-envelope"></i>
-  </a>
-  <a href="https://www.linkedin.com/in/benjaminmacleod/" class="social-icon" title="LinkedIn" target="_blank">
-    <i class="fab fa-linkedin-in"></i>
-  </a>
-  <a href="https://www.instagram.com/benjamin_macleod/" class="social-icon" title="Instagram" target="_blank">
-    <i class="fab fa-instagram"></i>
-  </a>
-  <a href="https://www.youtube.com/@benjaminmacleod" class="social-icon" title="YouTube" target="_blank">
-    <i class="fab fa-youtube"></i>
-  </a>
-</div>
+      <hr class="gradient-hr" />
 
-        <hr class="gradient-hr">
-        
-    <p class="footText">Copyright &copy; <script>document.write(new Date().getFullYear())</script> Benjamin MacLeod. All Rights Reserved.</p>
-<div class="social-bar">
-  <a href="mailto:you@example.com" class="social-icon" title="Email">
-    <i class="fas fa-envelope"></i>
-  </a>
-  <a href="https://linkedin.com/in/yourusername" class="social-icon" title="LinkedIn" target="_blank">
-    <i class="fab fa-linkedin-in"></i>
-  </a>
-  <a href="https://instagram.com/yourusername" class="social-icon" title="Instagram" target="_blank">
-    <i class="fab fa-instagram"></i>
-  </a>
-  <a href="https://youtube.com/@yourchannel" class="social-icon" title="YouTube" target="_blank">
-    <i class="fab fa-youtube"></i>
-  </a>
-</div>
+      <p class="footText">
+        Copyright &copy;
+        <script>
+          document.write(new Date().getFullYear());
+        </script>
+        Benjamin MacLeod. All Rights Reserved.
+      </p>
+      <div class="social-bar">
+        <a href="mailto:you@example.com" class="social-icon" title="Email">
+          <i class="fas fa-envelope"></i>
+        </a>
+        <a href="https://linkedin.com/in/yourusername" class="social-icon" title="LinkedIn" target="_blank">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+        <a href="https://instagram.com/yourusername" class="social-icon" title="Instagram" target="_blank">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://youtube.com/@yourchannel" class="social-icon" title="YouTube" target="_blank">
+          <i class="fab fa-youtube"></i>
+        </a>
+      </div>
     </div>
-    </body>
+  </body>
 </html>
