--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <h1 class="gradient-underline">Hello,</h1>
                 <p>
                     My name is Benjamin MacLeod, and I am pursuing a Bachelor of Business Administration degree at
-                    Acadia University. Some of my hobbies include video ediitng, photography, and writing.
+                    Acadia University. Some of my hobbies include video editing, photography, and writing.
                 </p>
             </div>
             <h4>Find me online:</h4>
