--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
         <h1 class="gradient-underline">Hello,</h1>
         <p>
           My name is Benjamin MacLeod, and I am pursuing a Bachelor of Business Administration degree at Acadia
-          University. Some of my hobbies include video ediitng, photography, and writing.
+          University. Some of my hobbies include video editing, photography, and writing.
         </p>
         <br />
         <img
