Added new videos

--- a/projects.html
+++ b/projects.html
@@ -98,7 +98,23 @@
             style="border: none"
             width="560"
             height="315"
-            src="https://www.youtube.com/embed/a-1ohx83QH4?si=OnKAvqeI52yM1YtL"
+            src="https://www.youtube.com/embed/videoseries?si=KgEuIQ_7s9Waxvzd&amp;list=PL_Hw_NxEAoeE514Ityu05urRp8XVmMHrF"
+            title="YouTube video player"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen></iframe>
+        </div>
+      </div>
+
+      <br />
+
+      <div class="video-div">
+        <div class="video-wrapper">
+          <iframe
+            style="border: none"
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/GAjH-E6ajlM?si=OSK9grgfnoLkhxBU"
             title="YouTube video player"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin"
