--- a/projects.html
+++ b/projects.html
@@ -82,8 +82,7 @@
             href="https://sites.google.com/view/southcolchesterarchives/home"
             title="SCA Archives"
             target="_blank"
-            >bit.ly/southcolchesterarchives</a
-          >
+            >bit.ly/southcolchesterarchives</a>
         </p>
         <p>
           SCA Archives is a digital collection of yearbooks, video projects, and additional content. SCA Archives
@@ -91,7 +90,7 @@
           School (1950 - 2003).
         </p>
       </div>
-
+<br>
       <div class="video-div">
         <div class="video-wrapper">
           <iframe
