--- a/fr/index.html
+++ b/fr/index.html
@@ -38,9 +38,9 @@
         <div class="navBar">
             <h4 class="title"><a>Benjamin MacLeod</a></h4>
             <div class="navRight">
-                <h5><a class="navLink" data-text="Accueil" href="/fr/index.html">Home</a></h5>
-                <h5><a class="navLink" data-text="Projets" href="/fr/projects.html">Projects</a></h5>
-                <h5><a class="navLink" data-text="À propos" href="/fr/about.html">About</a></h5>
+                <h5><a class="navLink" data-text="Accueil" href="/fr/index.html">Accueil</a></h5>
+                <h5><a class="navLink" data-text="Projets" href="/fr/projects.html">Projets</a></h5>
+                <h5><a class="navLink" data-text="À propos" href="/fr/about.html">À propos</a></h5>
                 <h5 class="icon-toggle" id="darkModeToggle">
                     <a class="material-symbols-outlined icon-outline">dark_mode</a>
                     <a class="material-symbols-outlined icon-filled">dark_mode</a>
