--- a/fr/about.html
+++ b/fr/about.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <!--Meta - Title-->
-        <title>Benjamin MacLeod</title>
+        <title>À propos | Benjamin MacLeod</title>
 
         <!--Meta - Favicon-->
         <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
@@ -24,7 +24,7 @@
 
         <!--Meta - Facebook-->
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Benjamin MacLeod" />
+        <meta property="og:title" content="À propos | Benjamin MacLeod" />
         <meta property="og:image" content="https://benjaminmacleod.com/images/portrait_landscape.jpg" />
         <meta property="og:image:alt" content="Un portrait de Benjamin MacLeod debout devant une forêt en automne" />
         <meta
