--- a/fr/projects.html
+++ b/fr/projects.html
@@ -36,7 +36,7 @@
     </head>
     <body>
         <div class="navBar">
-            <h4 class="title"><a>Projets | Benjamin MacLeod</a></h4>
+            <h4 class="title"><a>Benjamin MacLeod</a></h4>
             <div class="navRight">
                 <h5><a class="navLink" data-text="Accueil" href="/fr/index.html">Accueil</a></h5>
                 <h5><a class="navLink" data-text="Projets" href="/fr/projects.html">Projets</a></h5>
