--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             </div>
 
             <hr class="gradient-hr" />
-
+<!-- Footer Text -->
             <p class="footText">
                 Copyright &copy;
                 <script>
