--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 }
             });
         </script>
-
+        <!-- Main Content -->
         <div class="mainContent">
             <div class="homeBio">
                 <h1 class="gradient-underline">Hello,</h1>
