--- a/about.html
+++ b/about.html
@@ -111,19 +111,19 @@
         Benjamin MacLeod. All Rights Reserved.
       </p>
       <div class="social-bar">
-        <a href="mailto:you@example.com" class="social-icon" title="Email">
-          <i class="fas fa-envelope"></i>
-        </a>
-        <a href="https://linkedin.com/in/yourusername" class="social-icon" title="LinkedIn" target="_blank">
-          <i class="fab fa-linkedin-in"></i>
-        </a>
-        <a href="https://instagram.com/yourusername" class="social-icon" title="Instagram" target="_blank">
-          <i class="fab fa-instagram"></i>
-        </a>
-        <a href="https://youtube.com/@yourchannel" class="social-icon" title="YouTube" target="_blank">
-          <i class="fab fa-youtube"></i>
-        </a>
-      </div>
+                <a href="mailto:me@benjaminmacleod.com" class="social-icon" title="Email">
+                    <i class="fas fa-envelope"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/benjaminmacleod/" class="social-icon" title="LinkedIn" target="_blank">
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
+                <a href="https://www.instagram.com/_benjaminmacleod/" class="social-icon" title="Instagram" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://www.youtube.com/@benjaminmacleod" class="social-icon" title="YouTube" target="_blank">
+                    <i class="fab fa-youtube"></i>
+                </a>
+            </div>
     </div>
   </body>
 </html>
