--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </head>
     <body>
         <div class="navBar">
-            <h4 class="title"><a>Benjamin MacLeod</a></h4>
+            <h4 class="title"><a href="/index.html">Benjamin MacLeod</a></h4>
             <div class="navRight">
                 <h5><a class="navLink" data-text="Home" href="/index.html">Home</a></h5>
                 <h5><a class="navLink" data-text="Projects" href="/projects.html">Projects</a></h5>
