--- a/projects.html
+++ b/projects.html
@@ -186,7 +186,7 @@
                 <a href="https://www.linkedin.com/in/benjaminmacleod/" class="social-icon" title="LinkedIn" target="_blank">
                     <i class="fab fa-linkedin-in"></i>
                 </a>
-                <a href="https://www.instagram.com/_benjaminmacleod/" class="social-icon" title="Instagram" target="_blank">
+                <a href="https://www.instagram.com/benjamin_macleod/" class="social-icon" title="Instagram" target="_blank">
                     <i class="fab fa-instagram"></i>
                 </a>
                 <a href="https://www.youtube.com/@benjaminmacleod" class="social-icon" title="YouTube" target="_blank">
