--- a/experience.html
+++ b/experience.html
@@ -84,6 +84,7 @@
                 </p>
                 <ul>
                     <li>Produce training videos to be used for onboarding and training employees</li>
+                    <li>Collaborated with experienced employees to create clear and detailed documentation for complex production processes</li>
                 </ul>
             </div>
 
