--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </a>
             </div>
 
-            <h1 class="h1-underline"><a href="/projects.html">Recent Projects</a></h1>
+            <h1 class="h1-underline"><a href="/projects.html">Featured Projects</a></h1>
             <div class="video-div">
                 <div class="video-wrapper">
                     <iframe
