--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=dark_mode" />
+            href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=dark_mode,menu" />
 
     <!--Meta - Facebook-->
     <meta property="og:type" content="website" />
@@ -35,42 +35,109 @@
     <style></style>
   </head>
   <body>
-    <div class="navBar">
-      <h4 class="title"><a>Benjamin MacLeod</a></h4>
-      <div class="navRight">
-        <h5><a class="navLink" data-text="Home" href="/index.html">Home</a></h5>
-        <h5><a class="navLink" data-text="Projects" href="/projects.html">Projects</a></h5>
-        <h5><a class="navLink" data-text="About" href="/about.html">About</a></h5>
-        <h5 class="icon-toggle" id="darkModeToggle">
-          <a class="material-symbols-outlined icon-outline">dark_mode</a>
-          <a class="material-symbols-outlined icon-filled">dark_mode</a>
-        </h5>
-      </div>
+    <div id="fullScreenMenu" class="full-screen-menu">
+        <button id="closeMenu" class="close-btn">×</button>
+        <nav>
+            <a class="mobileMenuButton" data-text="Home" href="/index.html">Home</a>
+            <a class="mobileMenuButton" data-text="Projects" href="/projects.html">Projects</a>
+            <a class="mobileMenuButton" data-text="About" href="/about.html">About</a>
+        </nav>
     </div>
-    <script>
-      const toggleBtn = document.getElementById("darkModeToggle");
+        <div class="navBar">
+            <h4 class="title"><a href="/index.html">Benjamin MacLeod</a></h4>
+            <div class="navRight">
+                <h5><a class="navLink" data-text="Home" href="/index.html">Home</a></h5>
+                <h5><a class="navLink" data-text="Projects" href="/projects.html">Projects</a></h5>
+                <h5><a class="navLink" data-text="About" href="/about.html">About</a></h5>
+                <h5 class="icon-toggle" id="darkModeToggle">
+                    <a class="material-symbols-outlined icon-outline">dark_mode</a>
+                    <a class="material-symbols-outlined icon-filled">dark_mode</a>
+                </h5>
+            </div>
+        </div>
+        <div class="MOBILEnavBar">
+            <h4 class="title"><a href="/index.html">Benjamin MacLeod</a></h4>
+            <div class="navRight">
+                    <h5 class="icon-toggle menu-toggle" id="menuToggle">
+                    <span class="material-symbols-outlined icon-outline">menu</span>
+                    <span class="material-symbols-outlined icon-filled">menu</span>
+                </h5>
+                <h5 class="icon-toggle" id="mobiledarktoggle">
+                    <a class="material-symbols-outlined icon-outline">dark_mode</a>
+                    <a class="material-symbols-outlined icon-filled">dark_mode</a>
+                </h5>
 
-      toggleBtn.addEventListener("click", () => {
+            </div>
+            
+        </div>
+    
+<script>
+window.addEventListener("DOMContentLoaded", () => {
+    const menuToggle = document.getElementById("menuToggle");
+    const fullScreenMenu = document.getElementById("fullScreenMenu");
+    const closeMenu = document.getElementById("closeMenu");
+
+    if (!menuToggle || !fullScreenMenu || !closeMenu) {
+        console.warn("Missing toggle, menu, or close button element.");
+        return;
+    }
+
+    // Open the menu
+    menuToggle.addEventListener("click", () => {
+        fullScreenMenu.classList.add("active");
+    });
+
+    // Close the menu with button
+    closeMenu.addEventListener("click", () => {
+        fullScreenMenu.classList.remove("active");
+    });
+
+    // Close the menu with ESC key
+    document.addEventListener("keydown", (e) => {
+        if (e.key === "Escape") {
+            fullScreenMenu.classList.remove("active");
+        }
+    });
+});
+</script>
+<script>
+window.addEventListener("DOMContentLoaded", () => {
+    const desktopToggle = document.getElementById("darkModeToggle");
+    const mobileToggle = document.getElementById("mobiledarktoggle");
+    const toggles = [desktopToggle, mobileToggle];
+
+    // Safety check
+    if (!desktopToggle || !mobileToggle) {
+        console.warn("One or more toggle buttons not found.");
+    }
+
+    // Apply saved theme
+    const savedTheme = localStorage.getItem("theme");
+    if (savedTheme === "dark") {
+        document.body.classList.add("dark-mode");
+        toggles.forEach(toggle => toggle?.classList.add("active"));
+    }
+
+    // Toggle handler
+    function handleToggle() {
         document.body.classList.toggle("dark-mode");
-        toggleBtn.classList.toggle("active");
 
-        // Optional: Save preference to localStorage
-        if (document.body.classList.contains("dark-mode")) {
-          localStorage.setItem("theme", "dark");
-        } else {
-          localStorage.setItem("theme", "light");
-        }
-      });
+        const isDark = document.body.classList.contains("dark-mode");
+        localStorage.setItem("theme", isDark ? "dark" : "light");
 
-      // On page load, apply saved theme
-      window.addEventListener("DOMContentLoaded", () => {
-        const savedTheme = localStorage.getItem("theme");
-        if (savedTheme === "dark") {
-          document.body.classList.add("dark-mode");
-          toggleBtn.classList.add("active");
-        }
-      });
-    </script>
+        // Update all toggle buttons
+        toggles.forEach(toggle => toggle?.classList.toggle("active"));
+    }
+
+    // Attach event listeners
+    toggles.forEach(toggle => {
+        toggle?.addEventListener("click", (e) => {
+            e.preventDefault();
+            handleToggle();
+        });
+    });
+});
+</script>
 
     <div class="mainContent">
       <div class="homeBio">
